--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "next": "^10.2.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "sass": "^1.32.12"
+        "sass": "^1.32.12",
+        "ytdl-core": "^4.7.0"
     },
     "devDependencies": {
         "@types/node": "^15.0.1",
